[package]
name = "caching-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["compression-full", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
clap = { version = "4", features = ["derive"] }
url = "2.5"
serde = { version = "1", features = ["derive"] }
